# guitar-exercises

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Makefile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  vite.config.ts
.claude/: settings.local.json
.claude/output/: daily-challenge-plan.md  quick-spec-fretboard-exercise.md
.github/workflows/: ci.yml  deploy.yml
config/: chords.yaml
src/: App.vue
src/features/fretboard/: FretboardExercise.vue  fretboard.spec.ts  fretboard.ts  useFretboardExercise.spec.ts  useFretboardExercise.ts
src/guitar_exercises/: config.py  logging.py  main.py  version.py
src/guitar_exercises/domain/: chords.py  chords.yaml  find_note.py  name_note.py  notes.py  recent.py  timings.py  tuning.py
src/guitar_exercises/rendering/: chord_svg.py
src/guitar_exercises/routes/: exercises.py  home.py
src/guitar_exercises/static/css/: app.css
src/guitar_exercises/static/js/: auto-advance.js  chord-notes.js  timer.js
src/guitar_exercises/templates/: base.html  home.html
src/guitar_exercises/templates/exercises/: _answer_feedback.html  _chord_name_feedback.html  (+9 more)
tests/: conftest.py  test_version.py
tests/domain/: test_chord_guess.py  test_chords.py  test_find_note.py  test_name_note.py  test_notes.py  test_recent.py  test_timings.py
tests/rendering/: test_chord_svg.py
tests/routes/: test_chord_name_route.py  test_chord_notes_route.py  test_exercises_timer.py  test_find_note_route.py  test_home.py  test_name_note_route.py  test_recent_cookies.py
