[project]
name = "guitar-exercises"
version = "0.1.0"
description = "Guitar learning exercises — fretboard note recognition through chord shapes"
authors = [{ name = "Jordi Riera", email = "jordi.riera@autodesk.com" }]
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi (>=0.115.0,<1)",
    "uvicorn[standard] (>=0.32.0,<1)",
    "jinja2 (>=3.1.0,<4)",
    "pydantic (>=2.9.0,<3)",
    "pydantic-settings (>=2.5.0,<3)",
    "loguru (>=0.7.0,<1)",
    "python-multipart (>=0.0.12,<1)",
    "pyyaml (>=6.0,<7)",
]

[tool.poetry]
packages = [{ include = "guitar_exercises", from = "src" }]
include = ["src/guitar_exercises/domain/chords.yaml"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0,<9"
pytest-asyncio = ">=0.24.0,<1"
pytest-recording = ">=0.13.0,<1"
httpx = ">=0.27.0,<1"
ruff = ">=0.15.13,<1"
pytest-xdist = "^3.8.0"
pre-commit = ">=4.0.0,<5"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
